[gd_scene load_steps=2 format=3 uid="uid://a"]

[ext_resource type="Script" uid="uid://ccev3wwywwxn3" path="res://scenes/song_visualizer.gd" id="1"]

[node name="SongVisualizer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TitleBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="BackButton" type="Button" parent="TitleBar"]
layout_mode = 2
text = "Back"

[node name="Title" type="Label" parent="TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_font_sizes/font_size = 24
text = "Chart Visualizer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.083
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="Control" parent="ScrollContainer"]
layout_mode = 2

[connection signal="pressed" from="TitleBar/BackButton" to="." method="_on_back_button_pressed"]
